* Make these HttpClient methods public: SetFormVariable, ClearFormVariable, SubmitForm
* FAQ: No change to "get" without postback (eg, tracker #1106130)
* Look into HtmlAgilityPack HTML parser: http://blogs.msdn.com/smourier/archive/2003/06/04/8265.aspx


Before release:
* Update build: remove NUnit, put NUnitAdapter.cs in bin/ dir
* Copy new constructors to every tester
* Finish migration guide.


Changes in CVS:
Produced by Jim Shore.
* Added FAQ: How to test sites that require authentication.  Credit to Jim Shore.
* Removed NUnit requirement.  NUnitAsp now works with any test framework.  Credit to Jim Shore.
* Replaced Browser property with HttpClient.Default static property.  Credit to Jim Shore.
* Replaced CurrentWebForm property with single-parameter constructor for testers.  Credit to Jim Shore.
* Created NUnitAdapter.cs file that provides backwards compatibility and quick-start for NUnit users.  Credit Jim Shore.
* Created new migration guide for v1.6.  Removed old NUnit 2.0 migration guide.  Credit to Jim Shore.


Changes in NUnitAsp 1.5.1:
Produced by Jim Shore and Levi Khatskevitch.
* Added PostBack() overload that takes actual event target and argument.  Credit to Jim Shore.
* Fixed parsing error that occurred when combining <style> tag with HTML comments.  Credit to Jim Shore.
* Added UrlReferrer support to the Browser (HttpClient) object.  Credit to Levi Khatskevitch.
* Upgraded to NUnit 2.2.0.  Credit to Jim Shore.


Changes in NUnitAsp 1.5:
Produced by Jim Shore and Levi Khatskevitch.
* Added an ImageButtonTester.Click overload that takes no arguments.  Credit to Kyle Heon.
* Added CLS compliance (except for certain members).  Credit to Levi Khatskevitch and Michael Ridgway.
* Added HTTP proxy support to the Browser (HttpClient) object.  Credit to Torin Ford.
* Clarified API documentation for all classes.  Credit to Jim Shore.
* Renamed AnchorTester HTML control tester to HtmlAnchorTester.  Credit to Levi Khatskevitch.